Chức năng thêm, xoá, sửa sản phẩm

--- a/GUI/Properties/Resources.resx
+++ b/GUI/Properties/Resources.resx
@@ -127,6 +127,15 @@
   <data name="DoanhSo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DoanhSo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AnhMacDinh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AnhMacDinh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LoiNhuan" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LoiNhuan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="BanHang" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BanHang.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="CloseActive" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CloseActive.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -145,12 +154,6 @@
   <data name="Close" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Close.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="KhachHang" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\KhachHang.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="CongNo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\CongNo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="ThuChi" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ThuChi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -163,16 +166,16 @@
   <data name="GuiBaoHanh" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GuiBaoHanh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="KhachHang" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\KhachHang.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CongNo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CongNo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="DoanhThu" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DoanhThu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="BanHang" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\BanHang.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="AnhMacDinh" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\AnhMacDinh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="LoiNhuan" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\LoiNhuan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ThemHinhAnh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ThemHinhAnh.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
